<resources>
    <string name="app_name">GPOD App</string>
    <string name="menu_home">Help</string>
    <string name="menu_gallery">Room Selection</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_start">Start</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="maks_idi_nahuy">Maks idi nahuy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="help1">Для корректной работы вам необходимо:</string>
    <string name="help2">1. Нажать кнопку  Start  для начала работы</string>
    <string name="help3">2. Затем в появившемся окне вы можете нажать кнопку Room и ввести в появившемся окне количество углов комнаты.</string>
    <string name="help4">3. Расставить углы комнаты.</string>
    <string name="help5">4. Слева снизу введите необходимое количество маяков и нажмите ок (кнопка + можно добавлять по 1 маяку). </string>
    <string name="help6">5. Расставить маяки. </string>
    <string name="help7">6. Выбрать метод расчета GDOP дальномерный или разностно-дальномерный метод (изначальо стоит дальномерный метод). </string>
    <string name="help8">7. Нажать кнопку Go. </string>
    <string name="help9">8. Дождаться расчета GDOP и построения графика. </string>
</resources>
